# 3d-marker

./: .gitignore  gaussian_recon.py  main.py  pyproject.toml  test_open3d.ipynb
data/: download-multi-thread.py  download-scannet.py
preprocess/: extract_data.py  image_util.ipynb  image_util.py  point_projection.py
preprocess/scannet/: SensorData.py  reader.py
scene_controller/: cotroller.py  scannet_controller.py
